hopefully fixed misalignment of handle on mobile; numeric keyboard input

--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,18 @@ body {
 #handle {
   position: absolute;
   cursor: pointer;
-  top: 0;
-  left: 0;
-  transform: translate(-50%, -50%);
+  /* top: 0;
+  left: 0; */
+  /* transform: translate(-50%, -50%); */
+  /* user-select: none; */
   width: 6rem;
   height: 6rem;
   border: none;
-  background-color: none;
+  background-color: white;
+  opacity: 0.1;
   border-radius: 6rem;
   z-index: 1;
+  margin: 0;
 }
 
 .figures {
